--- a/C++17Study/C++17Study.vcxproj.filters
+++ b/C++17Study/C++17Study.vcxproj.filters
@@ -45,7 +45,61 @@
     <ClCompile Include="7_clarification_aligned_new.cpp">
       <Filter>소스 파일\part1</Filter>
     </ClCompile>
-    <ClCompile Include="Clarification_func_except_type.cpp">
+    <ClCompile Include="8_Clarification_func_except_type.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="9_structured_binding.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="10_features_city_map-iterate.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="11_features_custom_structred_bindings.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="12_init_statement_for_int_and_switch.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="13_inline_variable.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="14_constexpr_Lambda_Expressions.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="15_features_capture_this.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="16_returning_a_lambda_from_a_method.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="17_nested_namespaces.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="18_features_has_include.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="19_Class_Template_Argument_Deduction.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="20_template_deduction.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="21_fold_expressions.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="22_if_constexpr.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="23_template_code_simplification.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="24_declaring_custom_get_n.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="25_declaring_non_type_template_parameters_with_auto.cpp">
+      <Filter>소스 파일\part1</Filter>
+    </ClCompile>
+    <ClCompile Include="26_attributes.cpp">
       <Filter>소스 파일\part1</Filter>
     </ClCompile>
   </ItemGroup>
